src/index.css
@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
@import "tailwindcss";

/* Import Fonts */

:root {
  /* font sizes */
  --fs-heading-1: 57px;
  --fs-heading-2: 45px;
  --fs-heading-3: 32px;
  --fs-heading-4: 28px;
  --fs-heading-5: 22px;
  --fs-heading-6: 16px;
  --fs-paragraph: 14px;
  --fs-paragraph-sm: 12px;

  /* font weights */
  --fw-bold: 700;
  --fw-semibold: 600;
  --fw-medium: 500;
  --fw-regular: 400;

  /* line heights */
  --lh-heading-1: 64px;
  --lh-heading-2: 52px;
  --lh-heading-3: 40px;
  --lh-heading-4: 36px;
  --lh-heading-5: 28px;
  --lh-heading-6: 24px;
  --lh-paragraph: 20px;
  --lh-paragraph-sm: 16px;

  /* letter spacing */
  --ls-025: 0.25px;
  --ls-0: 0;
  --ls-015: 0.15px;
  --ls-05: 0.5px;
  --ls-04: 0.4px;
  --ls-01: 0.1px;
  --ls-n-025: -0.25px;

  --app-bg: #fafafa;

  --surface-bg-primary: #ffffff;
  --surface-bg-secondary: #f4f4f5;
  --surface-bg-tertiary: #e4e4e7;

  --text-primary: #000000;
  --text-secondary: #27272a;
  --text-tertiary: #71717a;

  --border-primary: #d4d4d8;
  --border-secondary: #e4e4e7;
  --border-tertiary: #f4f4f5;

  --sb-ocean-bg-active: #0d6fec;
  --sb-ocean-bg-hover: #1486fc;
  --sb-ocean-bg-on-press: #1157bc;
  --sb-ocean-bg-disabled: #d8f1ff;

  --sb-ocean-content-primary: #eef9ff;
  --sb-ocean-content-secondary: #53c3ff;

  --sb-sunglow-bg-active: #ffc833;
  --sb-sunglow-bg-hover: #ffd74a;
  --sb-sunglow-bg-on-press: #f9a107;
  --sb-sunglow-bg-disabled: #fff5c6;

  --sb-sunglow-content-primary: #000000;
  --sb-sunglow-content-secondary: #ffd74a;

  --sb-sakura-bg-active: #fc6aa1;
  --sb-sakura-bg-hover: #fea7ca;
  --sb-sakura-bg-on-press: #f63e7f;
  --sb-sakura-bg-disabled: #fde6f0;

  --sb-sakura-content-primary: #ffffff;
  --sb-sakura-content-secondary: #fea7ca;

  /* SB Amethyst Theme */
  --sb-amethyst-bg-active: #8b5cf6;
  --sb-amethyst-bg-hover: #a78bfa;
  --sb-amethyst-bg-on-press: #6d28d9;
  --sb-amethyst-bg-disabled: #ede9fe;

  --sb-amethyst-content-primary: #ffffff;
  --sb-amethyst-content-secondary: #a78bfa;

  --sb-pumpkin-bg-active: #f07225;
  --sb-pumpkin-bg-hover: #f38e44;
  --sb-pumpkin-bg-on-press: #e15515;
  --sb-pumpkin-bg-disabled: #fdecd7;

  --sb-pumpkin-content-primary: #ffffff;
  --sb-pumpkin-content-secondary: #f7b67a;

  --sb-valencia-bg-active: #ec5447;
  --sb-valencia-bg-hover: #f57e74;
  --sb-valencia-bg-on-press: #db4437;
  --sb-valencia-bg-disabled: #fde5e3;

  --sb-valencia-content-primary: #ffffff;
  --sb-valencia-content-secondary: #faaeaa;

  --sb-green-haze-bg-active: #1bcc76;
  --sb-green-haze-bg-hover: #44e495;
  --sb-green-haze-bg-on-press: #0f9d58;
  --sb-green-haze-bg-disabled: #dbfdec;

  --sb-green-haze-content-primary: #ffffff;
  --sb-green-haze-content-secondary: #82f3bb;

  --sb-neutral-bg-active: #09090b;
  --sb-neutral-bg-hover: #27272a;
  --sb-neutral-bg-on-press: #18181b;
  --sb-neutral-bg-disabled: #d4d4d8;

  --sb-neutral-content-primary: #ffffff;
  --sb-neutral-content-secondary: #a1a1aa;

  --skeleton-bg: rgb(0, 0, 0, 0.1);
}

/* Mobile Headers */
@media only screen and (max-width: 480px) {
  :root {
    /* font sizes */
    --fs-heading-1: 45px;
    --fs-heading-2: 32px;
    --fs-heading-3: 28px;
    --fs-heading-4: 22px;
    --fs-heading-5: 20px;
    --fs-heading-6: 16px;
    --fs-paragraph: 14px;
    --fs-paragraph-sm: 12px;

    /* line heights */
    --lh-heading-1: 52px;
    --lh-heading-2: 40px;
    --lh-heading-3: 36px;
    --lh-heading-4: 28px;
    --lh-heading-5: 24px;
    --lh-heading-6: 24px;
    --lh-paragraph: 20px;
    --lh-paragraph-sm: 16px;
  }
}

/* General Styles */
body {
  margin: 0;
  padding: 0;
  font-family: "Inter", sans-serif;
  line-height: 1.5;
  font-size: 16px;
  background: var(--app-bg);
  color: var(--text-primary);
  transition: color 300ms ease, background-color 300ms ease;
}
body.dark-mode {
  --app-bg: #000000;

  --surface-bg-primary: #0d0d0d;
  --surface-bg-secondary: #18181b;
  --surface-bg-tertiary: #27272a;

  --text-primary: #ffffff;
  --text-secondary: #d4d4d8;
  --text-tertiary: #a1a1aa;

  --border-primary: #3f3f46;
  --border-secondary: #27272a;
  --border-tertiary: #18181b;

  --sb-ocean-bg-disabled: #122f59;
  --sb-ocean-content-secondary: #1157bc;

  --sb-sunglow-bg-disabled: #461b02;
  --sb-sunglow-content-secondary: #94400c;

  --sb-sakura-bg-disabled: #540318;
  --sb-sakura-content-secondary: #a50f36;

  --sb-pumpkin-bg-disabled: #411309;
  --sb-pumpkin-content-secondary: #943318;

  --sb-valencia-bg-disabled: #44100b;
  --sb-valencia-content-secondary: #97271d;

  --sb-green-haze-bg-disabled: #03301d;
  --sb-green-haze-content-secondary: #13683f;

  --sb-amethyst-bg-disabled: #2d1b69;
  --sb-amethyst-content-secondary: #6d28d9;

  --sb-neutral-bg-active: #fafafa;
  --sb-neutral-bg-hover: #e4e4e7;
  --sb-neutral-bg-on-press: #d4d4d8;
  --sb-neutral-bg-disabled: #09090b;
  --sb-neutral-content-primary: #000000;
  --sb-neutral-content-secondary: #27272a;

  --skeleton-bg: rgba(255, 255, 255, 0.1);
}
a,
button {
  cursor: pointer;
}

h1 {
  font-weight: var(--fw-semibold);
  font-size: var(--fs-heading-1);
  line-height: var(--lh-heading-1);
  letter-spacing: var(--ls-025);
}

h2 {
  font-weight: var(--fw-semibold);
  font-size: var(--fs-heading-2);
  line-height: var(--lh-heading-2);
  letter-spacing: var(--ls-0);
}

h3 {
  font-weight: var(--fw-semibold);
  font-size: var(--fs-heading-3);
  line-height: var(--lh-heading-3);
  letter-spacing: var(--ls-0);
}

h4 {
  font-weight: var(--fw-medium);
  font-size: var(--fs-heading-4);
  line-height: var(--lh-heading-4);
  letter-spacing: var(--ls-0);
}

h5 {
  font-weight: var(--fw-medium);
  font-size: var(--fs-heading-5);
  line-height: var(--lh-heading-5);
  letter-spacing: var(--ls-0);
}

h6 {
  font-weight: var(--fw-medium);
  font-size: var(--fs-heading-6);
  line-height: var(--lh-heading-6);
  letter-spacing: var(--ls-015);
}

p,
a,
th,
td,
button,
label,
select {
  font-weight: var(--fw-regular);
  font-size: var(--fs-paragraph);
  line-height: var(--lh-paragraph);
  letter-spacing: var(--ls-025);
}

span {
  font-weight: var(--fw-regular);
  font-size: var(--fs-paragraph-sm);
  line-height: var(--lh-paragraph-sm);
  letter-spacing: var(--ls-05);
}

.card-shadow {
  box-shadow: 0px 1px 0 rgba(0, 0, 0, 0.02), 0px 2px 6px rgba(0, 0, 0, 0.05);
}
.custom-scrollbar {
  --scrollbar-width: 8px;
  --scrollbar-height: 8px;
}

/* Math Start */
.math-container {
  max-width: 100%;
  overflow-x: auto;
}
math {
  display: block;
  max-width: 100%;
  overflow-x: auto;
}
/* Math End */

/* Text Content Start */
.text_content {
  --fs-heading-2: 32px;
  --fs-heading-3: 28px;
  --fs-heading-4: 22px;
  --fs-heading-5: 16px;
  --fs-heading-6: 14px;
  --fs-paragraph: 16px;
  --fs-paragraph-sm: 14px;
}
.text_content_heading {
  --fs-heading-1: 45px;
}

@media only screen and (max-width: 480px) {
  .text_content h1,
  .text_content h2,
  .text_content h3,
  .text_content h4,
  .text_content h5,
  .text_content h6 {
    margin-block: 10px;
  }
  .text_content_heading {
    --fs-heading-1: 40px;
  }
  .text_content img {
    width: 100%;
  }
}

.text_content ul {
  list-style: disc;
}
.text_content ul,
.text_content ol {
  margin-left: 30px;
  margin-bottom: 16px;
}
.text_content ul ul,
.text_content ol ul {
  margin-bottom: 0;
}
.text_content p,
.text_content * p {
  margin-bottom: 8px;
}
.text_content p,
.text_content li,
.text_content a,
.text_content span {
  line-height: 1.6;
  max-width: 120ch;
}
.text_content img {
  margin-block: 20px;
  border-radius: 12px;
  -webkit-border-radius: 12px;
  -moz-border-radius: 12px;
  -ms-border-radius: 12px;
  -o-border-radius: 12px;
}
.text_content * a {
  text-decoration: underline !important;
  text-underline-offset: 3px !important;
  color: var(--sb-ocean-bg-active) !important;
}
/* Text Content End */

/* Table Response Begin */
.table_responsive {
  /* width: fit-content; */
  max-width: 100%;
  overflow: hidden;
  overflow-x: auto;
  margin: 15px 0;
  border: 2px solid var(--border-primary);
  border-radius: 12px;
}

.table_responsive table {
  width: 100%;
  background: var(--surface-bg-tertiary);
  border-collapse: collapse;
  border-spacing: 0;
  overflow: hidden;
}

/* If <thead> exists, apply styles to the first row in the <thead> */
.table_responsive table thead > tr {
  background-color: var(--surface-bg-tertiary);
}

.table_responsive > table > tbody > tr > td {
  padding: 16px;
  border-bottom: 1px solid var(--border-primary);
}

.table_responsive p {
  margin: 0;
}

/* If <thead> does not exist, apply styles to the first <tr> in the tbody */
.table_responsive table tbody:has(thead) tr:first-child,
.table_responsive table:not(:has(thead)) tr:first-child {
  background-color: var(--surface-bg-secondary);
}

/* Table Response End */

/* Test Simualator Table Begin */
.test_simulator_table {
  max-width: fit-content;
  border: 2px solid var(--border-secondary);
  border-radius: 12px;
  overflow: hidden;
}
.test_simulator_table table {
  background: var(--surface-bg-primary);
  border-collapse: separate;
  border-spacing: 4px;
  overflow: hidden;
}
.test_simulator_table table tbody > tr > td,
.test_simulator_table table thead > tr > th {
  border: 1px solid var(--border-primary);
  background: var(--surface-bg-secondary);
  border-radius: 6px;
  width: 30px;
  height: 30px;
  aspect-ratio: 1 / 1;
  text-align: center;
  vertical-align: middle;
  user-select: none;
  pointer-events: none;
}
/* Test Simualator Table End */

/* Utilities */
.debug {
  border: 1px solid red;
}
.font-medium {
  font-weight: 500 !important;
}
.font-semibold {
  font-weight: 600 !important;
}
.font-bold {
  font-weight: 700 !important;
}
.font-extra-bold {
  font-weight: 800 !important;
}
.font-black {
  font-weight: 900 !important;
}

/* Scrollbar Styles Begin */
.scrollbar-hide {
  --webkit-scrollbar-width: none; /* Chrome, Safari, and Opera */
  --webkit-scrollbar: none; /* Chrome, Safari, and Opera */
  scrollbar-width: none; /* Firefox */
  -ms-overflow-style: none; /* IE 10+ */
}
.scrollbar-thin {
  --webkit-scrollbar-width: thin;
  scrollbar-width: thin; /* Firefox */
}

::-webkit-scrollbar-track {
  background: transparent;
}

::-webkit-scrollbar {
  width: 4px !important;
  height: 4px;
}
/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--border-secondary) !important;
  border-radius: 40px !important;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: var(--border-primary) !important;
}
/* Scrollbar Styles End */

/* Text Selection Styles */
::selection {
  background: var(--sb-ocean-bg-hover);
  color: white;
}

/*  */
img {
  image-rendering: auto;
  image-rendering: smooth; /* Firefox */
  image-rendering: -webkit-optimize-contrast; /* Safari/Chrome */
  image-rendering: -moz-crisp-edges; /* Older Firefox */
  image-rendering: -o-crisp-edges; /* Older Opera */
  image-rendering: pixelated; /* To force pixelation if wanted */
  image-rendering: optimizeQuality; /* Deprecated but still in use in some contexts */
}

.gradient {
  background-image: linear-gradient(
    45deg,
    hsl(23deg 87% 54%) 0%,
    hsl(13deg 94% 60%) 18%,
    hsl(3deg 99% 65%) 26%,
    hsl(352deg 100% 64%) 33%,
    hsl(343deg 98% 62%) 39%,
    hsl(335deg 93% 60%) 44%,
    hsl(327deg 83% 58%) 50%,
    hsl(318deg 70% 56%) 56%,
    hsl(304deg 54% 54%) 61%,
    hsl(285deg 57% 57%) 67%,
    hsl(264deg 65% 62%) 74%,
    hsl(239deg 72% 65%) 82%,
    hsl(214deg 90% 49%) 100%
  );
}

/* RESPONSIVE */
@media only screen and (min-width: 480px) {
  .test_submit_modal_action_buttons {
    flex-direction: row;
  }
}

